syntax = "proto3";

option go_package = "github.com/joshcarp/itproject/;itproject";
option java_multiple_files = true;
option java_package = "com.joshcarp.itproject";
option java_outer_classname = "pi";

package itproject;

/* authenticate is the miroservice that handles authentication */
service authenticate {
    rpc Register(RegisterRequest) returns (RegisterResponse){};
    rpc Login(LoginRequest) returns (LoginResponse){};
    rpc RenewJWT(LoginRequest) returns (LoginResponse){};
}

message RegisterRequest {
    string email = 1;
    string userid = 2;
    string fullName = 3;
    string preferredName = 4;
    string password = 5;
}

message RegisterResponse{
    string jwt = 2;
}

/* LoginRequest is empty because the Bas64(username:password) is contained in the header of the request */
message LoginRequest {
}

message LoginResponse {
    string jwt = 1;
}

message RenewJWTResponse {
    string jwt = 1;
}

/* RenewJWTRequest is empty becayse Bearer <JWT> should be used with this method */
message RenewJWTRequest {
}
